# zp-wui-cli

./: .editorconfig  .pre-commit-config.yaml  CONTRIBUTORS.txt  LICENSE  Makefile  README.md  README.rst  docker-compose.yaml  example.env  pyproject.toml  setup.cfg
controlacontas/: .dockerignore
controlacontas/config/: asgi.py  settings.py  urls.py  wsgi.py
controlacontas/tests/: test_version.py
ctlcontas/: .pre-commit-config.yaml  pyproject.toml  setup.cfg
ctlcontas/config/: settings.py
ctlcontas/tests/: test_version.py
docker/controlacontas/: Dockerfile
requirements/: base.txt  dev.txt
